--- a/Amazon WebScraping.ipynb
+++ b/Amazon WebScraping.ipynb
@@ -20,9 +20,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<!--[if lt IE 7]> <html lang=\"en-ae\" class=\"a-no-js a-lt-ie9 a-lt-ie8 a-lt-ie7\"> <![endif]-->\n",
+      "<!--[if IE 7]>    <html lang=\"en-ae\" class=\"a-no-js a-lt-ie9 a-lt-ie8\"> <![endif]-->\n",
+      "<!--[if IE 8]>    <html lang=\"en-ae\" class=\"a-no-js a-lt-ie9\"> <![endif]-->\n",
+      "<!--[if gt IE 8]><!-->\n",
+      "<html class=\"a-no-js\" lang=\"en-ae\">\n",
+      " <!--<![endif]-->\n",
+      " <head>\n",
+      "  <meta content=\"text/html; charset=utf-8\" http-equiv=\"content-type\"/>\n",
+      "  <meta charset=\"utf-8\"/>\n",
+      "  <meta content=\"IE=edge,chrome=1\" http-equiv=\"X-UA-Compatible\"/>\n",
+      "  <title dir=\"ltr\">\n",
+      "   Amazon.eg\n",
+      "  </title>\n",
+      "  <meta content=\"width=device-width\" name=\"viewport\"/>\n",
+      "  <link href=\"https://images-na.ssl-images-amazon.com/images/G/01/AUIClients/AmazonUI-3c913031596ca78a3768f4e934b1cc02ce238101.secure.min._V1_.css\" rel=\"stylesheet\"/>\n",
+      "  <script>\n",
+      "   if (true === true) {\n",
+      "            var ue_t0 = (+ new Date()),\n",
+      "                ue_csm = window,\n",
+      "                ue = { t0: ue_t0, d: function() { return (+new Date() - ue_t0); } },\n",
+      "                ue_furl = \"fls-eu.amazon.com\",\n",
+      "                ue_mid = \"ARBP9OOSHTCHU\",\n",
+      "                ue_sid = (document.cookie.match(/session-id=([0-9-]+)/) || [])[1],\n",
+      "                ue_sn = \"opfcaptcha.amazon.eg\",\n",
+      "                ue_id = 'N4D8CBCKNRM9EGA7XVNZ';\n",
+      "        }\n",
+      "  </script>\n",
+      " </head>\n",
+      " <body>\n",
+      "  <!--\n",
+      "لمناقشة الوصول الآلي إلى بيانات أمازون، يرجى التواصل عبر البريد الإلكتروني api-services-support@amazon.com. للحصول على معلومات حول الانتقال إلى واجهات برمجة التطبيقات (APIs) الخاصة بنا، يُرجى الرجوع إلى واجهات برمجة التطبيقات الخاصة بالسوق على https://developer.amazonservices.com/ref=rm_c_sv، أو واجهة برمجة تطبيقات إعلانات المنتجات على https://affiliate-program.amazon.com/gp/advertising/api/detail/main.html/ref=rm_c_ac لحالات\n",
+      "\n",
+      "To discuss automated access to Amazon data please contact api-services-support@amazon.com.\n",
+      "For information about migrating to our APIs refer to our Marketplace APIs at https://developer.amazonservices.com/ref=rm_c_sv, or our Product Advertising API at https://affiliate-program.amazon.com/gp/advertising/api/detail/main.html/ref=rm_c_ac for advertising use cases.\n",
+      "-->\n",
+      "  <!--\n",
+      "Correios.DoNotSend\n",
+      "-->\n",
+      "  <div class=\"a-container a-padding-double-large\" style=\"min-width:350px;padding:44px 0 !important\">\n",
+      "   <div class=\"a-row a-spacing-double-large\" style=\"width: 350px; margin: 0 auto\">\n",
+      "    <div class=\"a-row a-spacing-medium a-text-center\">\n",
+      "     <i class=\"a-icon a-logo\">\n",
+      "     </i>\n",
+      "    </div>\n",
+      "    <div class=\"a-box a-alert a-alert-info a-spacing-base\">\n",
+      "     <div class=\"a-box-inner\">\n",
+      "      <i class=\"a-icon a-icon-alert\">\n",
+      "      </i>\n",
+      "      <h4>\n",
+      "       أدخل الأحرف التي تراها أدناه\n",
+      "      </h4>\n",
+      "      <p class=\"a-last\">\n",
+      "       عذرًا، نحن فقط بحاجة إلى التأكد من أنك لست روبوت. للحصول على أفضل النتائج، يرجى التأكد من أن متصفحك يقبل ملفات تعريف الارتباط.\n",
+      "      </p>\n",
+      "     </div>\n",
+      "    </div>\n",
+      "    <div class=\"a-section\">\n",
+      "     <div class=\"a-box a-color-offset-background\">\n",
+      "      <div class=\"a-box-inner a-padding-extra-large\">\n",
+      "       <form action=\"/errors/validateCaptcha\" method=\"get\" name=\"\">\n",
+      "        <input name=\"amzn\" type=\"hidden\" value=\"vv7TfgyW47WuEO6TNhqxvw==\"/>\n",
+      "        <input name=\"amzn-r\" type=\"hidden\" value=\"/%D8%AA%D9%8A%D8%B4%D8%B1%D8%AA-%D8%A7%D9%84%D9%86%D8%B9%D9%88%D9%85%D8%A9-%D9%84%D9%84%D8%B1%D8%AC%D8%A7%D9%84-%D8%A7%D9%85%D8%B1%D9%8A%D9%83%D8%A7%D9%86-%D8%A8%D8%B1%D8%AA%D9%82%D8%A7%D9%84%D9%8A/dp/B0CG9855NJ\"/>\n",
+      "        <div class=\"a-row a-spacing-large\">\n",
+      "         <div class=\"a-box\">\n",
+      "          <div class=\"a-box-inner\">\n",
+      "           <h4>\n",
+      "            اكتب الأحرف.\n",
+      "           </h4>\n",
+      "           <div class=\"a-row a-text-center\">\n",
+      "            <img src=\"https://images-na.ssl-images-amazon.com/captcha/usvmgloq/Captcha_gllxusoryt.jpg\"/>\n",
+      "           </div>\n",
+      "           <div class=\"a-row a-spacing-base\">\n",
+      "            <div class=\"a-row\">\n",
+      "             <div class=\"a-column a-span6\">\n",
+      "             </div>\n",
+      "             <div class=\"a-column a-span6 a-span-last a-text-right\">\n",
+      "              <a onclick=\"window.location.reload()\">\n",
+      "               جرِّب صورة مختلفة.\n",
+      "              </a>\n",
+      "             </div>\n",
+      "            </div>\n",
+      "            <input autocapitalize=\"off\" autocomplete=\"off\" autocorrect=\"off\" class=\"a-span12\" id=\"captchacharacters\" name=\"field-keywords\" placeholder=\"اكتب الأحرف.\" spellcheck=\"false\" type=\"text\"/>\n",
+      "           </div>\n",
+      "          </div>\n",
+      "         </div>\n",
+      "        </div>\n",
+      "        <div class=\"a-section a-spacing-extra-large\">\n",
+      "         <div class=\"a-row\">\n",
+      "          <span class=\"a-button a-button-primary a-span12\">\n",
+      "           <span class=\"a-button-inner\">\n",
+      "            <button class=\"a-button-text\" type=\"submit\">\n",
+      "             متابعة التسوق.\n",
+      "            </button>\n",
+      "           </span>\n",
+      "          </span>\n",
+      "         </div>\n",
+      "        </div>\n",
+      "       </form>\n",
+      "      </div>\n",
+      "     </div>\n",
+      "    </div>\n",
+      "   </div>\n",
+      "   <div class=\"a-divider a-divider-section\">\n",
+      "    <div class=\"a-divider-inner\">\n",
+      "    </div>\n",
+      "   </div>\n",
+      "   <div class=\"a-text-center a-spacing-small a-size-mini\">\n",
+      "    <a href=\"https://www.amazon.eg/gp/help/customer/display.html?ie=UTF8&amp;nodeId=201909000\">\n",
+      "     شروط الاستخدام والبيع\n",
+      "    </a>\n",
+      "    <span class=\"a-letter-space\">\n",
+      "    </span>\n",
+      "    <span class=\"a-letter-space\">\n",
+      "    </span>\n",
+      "    <span class=\"a-letter-space\">\n",
+      "    </span>\n",
+      "    <span class=\"a-letter-space\">\n",
+      "    </span>\n",
+      "    <a href=\"https://www.amazon.eg/gp/help/customer/display.html?ie=UTF8&amp;nodeId=201909010\">\n",
+      "     إشعار الخصوصية لدى أمازون\n",
+      "    </a>\n",
+      "   </div>\n",
+      "   <div class=\"a-text-center a-size-mini a-color-secondary\">\n",
+      "    © 1996-2020,Amazon.com, Inc. or its affiliates\n",
+      "    <script>\n",
+      "     if (true === true) {\n",
+      "                document.write('<img src=\"https://fls-eu.amaz'+'on.com/'+'1/oc-csi/1/OP/requestId=N4D8CBCKNRM9EGA7XVNZ&js=1\" />');\n",
+      "            };\n",
+      "    </script>\n",
+      "    <noscript>\n",
+      "     <img src=\"https://fls-eu.amazon.com/1/oc-csi/1/OP/requestId=N4D8CBCKNRM9EGA7XVNZ&amp;js=0\">\n",
+      "     </img>\n",
+      "    </noscript>\n",
+      "   </div>\n",
+      "  </div>\n",
+      "  <script>\n",
+      "   if (true === true) {\n",
+      "        var head = document.getElementsByTagName('head')[0],\n",
+      "            prefix = \"https://images-eu.ssl-images-amazon.com/images/G/01/csminstrumentation/\",\n",
+      "            elem = document.createElement(\"script\");\n",
+      "        elem.src = prefix + \"csm-captcha-instrumentation.min.js\";\n",
+      "        head.appendChild(elem);\n",
+      "\n",
+      "        elem = document.createElement(\"script\");\n",
+      "        elem.src = prefix + \"rd-script-6d68177fa6061598e9509dc4b5bdd08d.js\";\n",
+      "        head.appendChild(elem);\n",
+      "    }\n",
+      "  </script>\n",
+      " </body>\n",
+      "</html>\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#connect to the website\n",
     "\n",
@@ -30,8 +189,19 @@
     "\n",
     "headers = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/118.0.0.0 Safari/537.36\", \"Accept-Encoding\": \"gzip, deflate, br\", \"Accept-Language\": \"en-US,en;q=0.9\", \"DNT\":\"1\",\"Connection\":\"close\", \"Upgrade-Insecure-Requests\":\"1\"}\n",
     "\n",
-    "page = requests.get(url, headers)"
+    "page = requests.get(url, headers)\n",
+    "\n",
+    "soup1 = BeautifulSoup(page.content, \"html.parser\")\n",
+    "\n",
+    "print(soup1.prettify())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
